--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -340,16 +340,16 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x5C04;&#x5929;&#x7F75;&#x5929;&#xFF1A;&#x6B66;&#x4E59;&#x3001;&#x7D02;&#x3001;&#x5B8B;&#x5EB7;&#x738B;&#x3001;&#x4E0A;&#x5B98;&#x5B89;</li>
 <li>&#x552F;&#x6050;&#x5929;&#x4E0B;&#x4E0D;&#x4E82;&#xFF1A;&#x6F22;&#x8D99;&#x5289;&#x9748;</li>
 <li>&#x611B;&#x6253;&#x5C0F;&#x5831;&#x544A;&#xFF1A;&#x606F;&#x592B;&#x8EAC;&#x3001;&#x5EC9;&#x662D;</li>
-<li>&#x88F8;&#x5954;&#x611B;&#x597D;&#x8005;&#xFF1A;&#x6851;&#x6248;&#x3001;&#x4E0A;&#x5B98;&#x5B89;&#x3001;&#x5289;&#x4F36;</li>
+<li>&#x66B4;&#x9732;&#x72C2;&#xFF1A;&#x6851;&#x6248;&#x3001;&#x4E0A;&#x5B98;&#x5B89;&#x3001;&#x5289;&#x4F36;&#x3001;&#x5F35;&#x6EFF;</li>
 <li>&#x98C6;&#x8ECA;&#x611B;&#x597D;&#x8005;&#xFF1A;&#x5289;&#x8CC0;</li>
 <li>cosplay&#x611B;&#x597D;&#x8005;&#xFF1A;&#x6FDF;&#x6771;&#x738B;&#x5289;&#x5F6D;&#x96E2;&#x3001;&#x6F22;&#x9748;&#x5E1D;</li>
 <li>&#x5973;&#x88DD;&#x5927;&#x4F6C;&#xFF1A;&#x66F9;&#x53E1;&#x3001;&#x4F55;&#x664F;</li>
 <li>&#x5A18;&#x7832;&#xFF1A;&#x674E;&#x56FA;&#x3001;&#x66F9;&#x690D;&#x3001;&#x4F55;&#x664F;&#x3001;&#x5510;&#x4F2F;&#x864E;</li>
 <li>&#x50DE;&#x5A18;&#x59D3;&#x540D;&#xFF1A;&#x5973;&#x9632;&#x3001;&#x99AE;&#x5A66;&#x3001;&#x6230;&#x570B;&#x5F90;&#x592B;&#x4EBA;&#x3001;&#x897F;&#x6F22;&#x4E01;&#x592B;&#x4EBA;&#x3001;&#x9B6F;&#x5973;&#x751F;</li>
 <li>&#x8457;&#x540D;&#x53F8;&#x6A5F;&#xFF1A;&#x9020;&#x7236;&#x3001;&#x6771;&#x91CE;&#x7562;&#x3001;&#x738B;&#x826F;&#x3001;&#x97D3;&#x54C0;&#x3001;&#x7F8A;&#x659F;&#x3001;&#x66F9;&#x53C3;&#x3001;&#x885B;&#x7DB0;</li>
-<li>&#x8B8A;&#x614B;&#x6BBA;&#x4EBA;&#x72C2;&#xFF1A;&#x5289;&#x5EFA;&#x3001;&#x5289;&#x53BB;&#x3001;&#x8463;&#x5353;&#x3001;&#x5B6B;&#x7693;</li>
+<li>&#x8B8A;&#x614B;&#x6BBA;&#x4EBA;&#x72C2;&#xFF1A;&#x5289;&#x5EFA;&#x3001;&#x5289;&#x53BB;&#x3001;&#x8463;&#x5353;&#x3001;&#x5B6B;&#x7693;&#x3001;&#x77F3;&#x9083;</li>
 <li>&#x5C60;&#x4F2F;&#xFF1A;&#x56B4;&#x5EF6;&#x5E74;&#x3001;&#x82DF;&#x665E;</li>
-<li>&#x98DF;&#x4EBA;&#x9B54;&#xFF1A;&#x7A0B;&#x6631;&#x3001;&#x5F35;&#x65B9;</li>
+<li>&#x98DF;&#x4EBA;&#x9B54;&#xFF1A;&#x7A0B;&#x6631;&#x3001;&#x5F35;&#x65B9;&#x3001;&#x77F3;&#x9083;</li>
 <li>&#x76DC;&#x5893;&#x9054;&#x4EBA;&#xFF1A;&#x5289;&#x53BB;&#x3001;&#x66F9;&#x64CD;&#x3001;&#x5442;&#x5E03;&#x3001;&#x6EAB;&#x97DC;&#x3001;&#x5289;&#x8C6B;&#x3001;&#x694A;&#x7489;&#x771F;&#x8FE6;&#x3001;&#x9673;&#x5949;&#x3001;&#x4E7E;&#x9686;&#x3001;&#x5B6B;&#x6BBF;&#x82F1;</li>
 <li>&#x88DD;&#x760B;&#x5927;&#x5E2B;&#xFF1A;&#x7B95;&#x5B50;&#x3001;&#x5B6B;&#x81CF;&#x3001;&#x84AF;&#x5FB9;&#x3001;&#x97CB;&#x7384;&#x6210;&#x3001;&#x8CC0;&#x5FAA;&#x3001;&#x6731;&#x68E3;</li>
 <li>&#x88DD;&#x6B7B;&#x5927;&#x5E2B;&#xFF1A;&#x675C;&#x6839;</li>
