--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -381,7 +381,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x4E0D;&#x5012;&#x7FC1;&#xFF1A;&#x53D4;&#x5B6B;&#x901A;&#x3001;&#x9673;&#x5E73;&#x3001;&#x80E1;&#x5EE3;&#x3001;&#x99AE;&#x9053;&#x3001;&#x66F9;&#x632F;&#x93DE;</li>
 <li>&#x4E09;&#x4EBA;&#x4E09;&#x5C0D;&#xFF1A;&#x885B;&#x9748;&#x516C;+&#x5F4C;&#x5B50;&#x7455;+&#x5357;&#x5B50;&#x3001;&#x6F22;&#x54C0;&#x5E1D;+&#x8463;&#x8CE2;+&#x8463;&#x8CE2;&#x59BB;(+&#x8463;&#x662D;&#x5100;)&#x3001;&#x6881;&#x5180;+&#x5B6B;&#x58FD;+&#x79E6;&#x5BAE;</li>
 <li>&#x5144;&#x5F1F;&#x4E09;&#x4EBA;&#x540C;&#x5E8A;&#xFF1A;&#x59DC;&#x80B1;+&#x59DC;&#x4EF2;&#x6D77;+&#x59DC;&#x5B63;&#x6C5F;&#x3001;&#x5289;&#x5099;+&#x95DC;&#x7FBD;+&#x5F35;&#x98DB;</li>
-<li>&#x523A;&#x5BA2;&#x4E0D;&#x5FCD;&#x6BBA;&#xFF1A;&#x8D99;&#x76FE;&#x3001;&#x5D14;&#x7426;&#x3001;&#x8521;&#x9095;</li>
+<li>&#x523A;&#x5BA2;&#x4E0D;&#x5FCD;&#x6BBA;&#xFF1A;&#x8D99;&#x76FE;&#x3001;&#x5D14;&#x7426;&#x3001;&#x8521;&#x9095;&#x3001;&#x8A31;&#x5112;</li>
 <li>&#x6975;&#x9650;&#x9003;&#x751F;&#xFF1A;&#x8D99;&#x6B66;&#x3001;&#x8607;&#x6B66;&#x3001;&#x675C;&#x6839;&#x3001;&#x7B2C;&#x4E94;&#x7A2E;&#x3001;&#x674E;&#x71EE;&#x3001;&#x8D99;&#x5C90;&#x3001;&#x5F35;&#x5109;</li>
 <li>&#x8650;&#x5F92;&#x4E8B;&#x4EF6;&#xFF1A;&#x9EC3;&#x77F3;&#x516C;+&#x5F35;&#x826F;&#x3001;&#x90ED;&#x6CF0;+&#x9B4F;&#x662D;</li>
 <li>&#x6613;&#x8207;&#x8033;&#xFF1A;&#x5287;&#x8F9B;+&#x9F90;&#x7156;&#x3001;&#x9F8D;&#x4E14;+&#x97D3;&#x4FE1;&#x3001;&#x674E;&#x5EE3;+&#x80E1;&#x865C;&#x3001;&#x590F;&#x4FAF;&#x6DF5;+&#x97D3;&#x9042;</li>
