更新人物至卷95節6，添加乞伏鮮卑、冉魏、翟魏世系
Former-commit-id: 4563f94117ce715820f0c2f9752c095d72ac81c2

--- a/2_世系圖表/2.2_并立政權/晉/冉魏世系圖表.html
+++ b/2_世系圖表/2.2_并立政權/晉/冉魏世系圖表.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>&#x524D;&#x71D5;&#x4E16;&#x7CFB;&#x5716;&#x8868;</title>
+      <title>&#x5189;&#x9B4F;&#x4E16;&#x7CFB;&#x5716;&#x8868;</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -261,76 +261,18 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h1 class="mume-header" id="%E5%89%8D%E7%87%95%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8">&#x524D;&#x71D5;&#x4E16;&#x7CFB;&#x5716;&#x8868;</h1>
-
-<h2 class="mume-header" id="%E4%B8%96%E7%B3%BB%E8%A1%A8">&#x4E16;&#x7CFB;&#x8868;</h2>
-
-<table>
-<thead>
-<tr>
-<th>&#x5E8F;&#x865F;</th>
-<th>&#x7D22;&#x5F15;&#x865F;</th>
-<th>&#x570B;&#x541B;&#x59D3;&#x540D;</th>
-<th>&#x5F97;&#x4F4D;&#x5E74;</th>
-<th>&#x5931;&#x4F4D;&#x5E74;</th>
-<th>&#x5099;&#x8A3B;</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>-1</td>
-<td>16064</td>
-<td>&#x6155;&#x5BB9;&#x5EC6;</td>
-<td></td>
-<td></td>
-<td>285-333&#x5E74;&#x7D71;&#x6CBB;&#x6155;&#x5BB9;&#x9BAE;&#x5351;</td>
-</tr>
-<tr>
-<td>1</td>
-<td>16203</td>
-<td>&#x6155;&#x5BB9;&#x769D;</td>
-<td>334</td>
-<td>348</td>
-<td>337&#x5E74;&#x81EA;&#x7A31;&#x71D5;&#x738B;</td>
-</tr>
-<tr>
-<td>2</td>
-<td></td>
-<td>&#x6155;&#x5BB9;&#x5101;</td>
-<td>349</td>
-<td>360</td>
-<td>352&#x5E74;&#x6EC5;&#x5189;&#x9B4F;&#x7A31;&#x5E1D;</td>
-</tr>
-<tr>
-<td>3</td>
-<td></td>
-<td>&#x6155;&#x5BB9;&#x6690;</td>
-<td>360</td>
-<td>370</td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<h2 class="mume-header" id="%E4%B8%96%E7%B3%BB%E5%9C%96">&#x4E16;&#x7CFB;&#x5716;</h2>
-
+      <ul>
+<li>
+<p>350&#x5E74;&#x5189;&#x9594;&#x7BE1;&#x5F8C;&#x8D99;&#x7A31;&#x5E1D;</p>
+</li>
+<li>
+<p>&#x4E16;&#x7CFB;&#x5716;</p>
+</li>
+</ul>
 <div class="mermaid">graph TB
 
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x7FF0;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x769D;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x4EC1;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x662D;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x5E7C;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x7A1A;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x8ECD;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x6C57;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x8A55;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x5F6A;
+&#x5189;&#x77BB;--&gt;&#x5189;&#x9594;--&gt;&#x5189;&#x667A;
 
-&#x6155;&#x5BB9;&#x769D;--&gt;&#x6155;&#x5BB9;&#x5101;
-&#x6155;&#x5BB9;&#x5101;--&gt;&#x6155;&#x5BB9;&#x6690;
-
-classDef king fill:#ffee00
-class &#x6155;&#x5BB9;&#x769D;,&#x6155;&#x5BB9;&#x5101;,&#x6155;&#x5BB9;&#x6690; king
 </div>
       </div>
       
