--- a/2_世系圖表/2.2_并立政權/晉/乞伏鮮卑世系圖表.html
+++ b/2_世系圖表/2.2_并立政權/晉/乞伏鮮卑世系圖表.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>&#x524D;&#x71D5;&#x4E16;&#x7CFB;&#x5716;&#x8868;</title>
+      <title>&#x4E5E;&#x4F0F;&#x9BAE;&#x5351;&#x4E16;&#x7CFB;&#x5716;&#x8868;</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -261,8 +261,11 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h1 class="mume-header" id="%E5%89%8D%E7%87%95%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8">&#x524D;&#x71D5;&#x4E16;&#x7CFB;&#x5716;&#x8868;</h1>
+      <h1 class="mume-header" id="%E4%B9%9E%E4%BC%8F%E9%AE%AE%E5%8D%91%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8">&#x4E5E;&#x4F0F;&#x9BAE;&#x5351;&#x4E16;&#x7CFB;&#x5716;&#x8868;</h1>
 
+<ul>
+<li>&#x53C8;&#x7A31;&#x4E5E;&#x4F0F;&#x90E8;&#x3001;&#x96B4;&#x897F;&#x9BAE;&#x5351;&#xFF0C;&#x897F;&#x79E6;&#x524D;&#x8EAB;</li>
+</ul>
 <h2 class="mume-header" id="%E4%B8%96%E7%B3%BB%E8%A1%A8">&#x4E16;&#x7CFB;&#x8868;</h2>
 
 <table>
@@ -279,35 +282,75 @@ pre[data-line] .line-highlight[data-end]:after {
 <tbody>
 <tr>
 <td>-1</td>
-<td>16064</td>
-<td>&#x6155;&#x5BB9;&#x5EC6;</td>
 <td></td>
+<td>&#x4E5E;&#x4F0F;&#x5982;&#x5F17;</td>
+<td>0</td>
+<td>0</td>
 <td></td>
-<td>285-333&#x5E74;&#x7D71;&#x6CBB;&#x6155;&#x5BB9;&#x9BAE;&#x5351;</td>
 </tr>
 <tr>
 <td>1</td>
-<td>16203</td>
-<td>&#x6155;&#x5BB9;&#x769D;</td>
-<td>334</td>
-<td>348</td>
-<td>337&#x5E74;&#x81EA;&#x7A31;&#x71D5;&#x738B;</td>
+<td></td>
+<td>&#x4E5E;&#x4F0F;&#x7D07;&#x5E72;</td>
+<td>0</td>
+<td>0</td>
+<td>&#x4E5E;&#x4F0F;&#x90E8;&#x9996;&#x4EFB;&#x53EF;&#x6C57;&#xFF0C;&#x7A31;&#x865F;&#x8A17;&#x9438;&#x83AB;&#x4F55;&#xFF0C;&#x5DE8;&#x87F2;&#x50B3;&#x8AAA;</td>
 </tr>
 <tr>
 <td>2</td>
 <td></td>
-<td>&#x6155;&#x5BB9;&#x5101;</td>
-<td>349</td>
-<td>360</td>
-<td>352&#x5E74;&#x6EC5;&#x5189;&#x9B4F;&#x7A31;&#x5E1D;</td>
+<td>&#x4E5E;&#x4F0F;&#x7950;&#x9130;</td>
+<td>265</td>
+<td>0</td>
+<td>&#x4E5E;&#x4F0F;&#x7D07;&#x5E72;&#x5F8C;&#x4EE3;</td>
 </tr>
 <tr>
 <td>3</td>
 <td></td>
-<td>&#x6155;&#x5BB9;&#x6690;</td>
-<td>360</td>
-<td>370</td>
+<td>&#x4E5E;&#x4F0F;&#x7D50;&#x6B0A;</td>
+<td>0</td>
+<td>0</td>
 <td></td>
+</tr>
+<tr>
+<td>4</td>
+<td></td>
+<td>&#x4E5E;&#x4F0F;&#x5229;&#x90A3;</td>
+<td>0</td>
+<td>0</td>
+<td></td>
+</tr>
+<tr>
+<td>5</td>
+<td></td>
+<td>&#x4E5E;&#x4F0F;&#x7941;&#x57FF;</td>
+<td>0</td>
+<td>0</td>
+<td></td>
+</tr>
+<tr>
+<td>6</td>
+<td>18661</td>
+<td>&#x4E5E;&#x4F0F;&#x8FF0;&#x5EF6;</td>
+<td>0</td>
+<td>0</td>
+<td></td>
+</tr>
+<tr>
+<td>7</td>
+<td>18662</td>
+<td>&#x4E5E;&#x4F0F;&#x5089;&#x5927;&#x5BD2;</td>
+<td>0</td>
+<td>0</td>
+<td>&#x9077;&#x5C45;&#x9EA5;&#x7530;&#x7121;&#x5B64;&#x5C71;</td>
+</tr>
+<tr>
+<td>8</td>
+<td>18663</td>
+<td>&#x4E5E;&#x4F0F;&#x53F8;&#x7E41;</td>
+<td>0</td>
+<td>376</td>
+<td>&#x5B50;&#x4E5E;&#x4F0F;&#x570B;&#x4EC1;</td>
 </tr>
 </tbody>
 </table>
@@ -315,22 +358,24 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <div class="mermaid">graph TB
 
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x7FF0;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x769D;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x4EC1;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x662D;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x5E7C;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x7A1A;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x8ECD;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x6C57;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x8A55;
-&#x6155;&#x5BB9;&#x5EC6;--&gt;&#x6155;&#x5BB9;&#x5F6A;
+&#x4E5E;&#x4F0F;&#x5982;&#x5F17;--&#x990A;&#x5B50;--&gt;&#x4E5E;&#x4F0F;&#x7D07;&#x5E72;
+&#x4E5E;&#x4F0F;&#x7D07;&#x5E72;--&#x5F8C;&#x4EE3;--&gt;&#x4E5E;&#x4F0F;&#x7950;&#x9130;
+&#x4E5E;&#x4F0F;&#x7950;&#x9130;--&gt;&#x4E5E;&#x4F0F;&#x7D50;&#x6B0A;
 
-&#x6155;&#x5BB9;&#x769D;--&gt;&#x6155;&#x5BB9;&#x5101;
-&#x6155;&#x5BB9;&#x5101;--&gt;&#x6155;&#x5BB9;&#x6690;
+&#x4E5E;&#x4F0F;&#x7D50;&#x6B0A;--&gt;&#x4E5E;&#x4F0F;&#x5229;&#x90A3;
+&#x4E5E;&#x4F0F;&#x7D50;&#x6B0A;--&gt;&#x4E5E;&#x4F0F;&#x7941;&#x57FF;
+&#x4E5E;&#x4F0F;&#x7D50;&#x6B0A;--&gt;&#x4E5E;&#x4F0F;&#x8EFB;&#x57FF;
 
-classDef king fill:#ffee00
-class &#x6155;&#x5BB9;&#x769D;,&#x6155;&#x5BB9;&#x5101;,&#x6155;&#x5BB9;&#x6690; king
+&#x4E5E;&#x4F0F;&#x5229;&#x90A3;--&gt;&#x4E5E;&#x4F0F;&#x8FF0;&#x5EF6;
+
+&#x4E5E;&#x4F0F;&#x7941;&#x57FF;--&gt;&#x4E5E;&#x4F0F;&#x5089;&#x5927;&#x5BD2;
+&#x4E5E;&#x4F0F;&#x7941;&#x57FF;--&gt;&#x4E5E;&#x4F0F;&#x5410;&#x96F7;
+
+&#x4E5E;&#x4F0F;&#x5089;&#x5927;&#x5BD2;--&gt;&#x4E5E;&#x4F0F;&#x53F8;&#x7E41;
+&#x4E5E;&#x4F0F;&#x5089;&#x5927;&#x5BD2;--&gt;&#x4E5E;&#x4F0F;&#x6B65;&#x9839;
+
+classDef king fill:#EEEE00
+class &#x4E5E;&#x4F0F;&#x7D07;&#x5E72;,&#x4E5E;&#x4F0F;&#x7950;&#x9130;,&#x4E5E;&#x4F0F;&#x7D50;&#x6B0A;,&#x4E5E;&#x4F0F;&#x5229;&#x90A3;,&#x4E5E;&#x4F0F;&#x7941;&#x57FF;,&#x4E5E;&#x4F0F;&#x8FF0;&#x5EF6;,&#x4E5E;&#x4F0F;&#x5089;&#x5927;&#x5BD2;,&#x4E5E;&#x4F0F;&#x53F8;&#x7E41; king
 </div>
       </div>
       
