--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -293,7 +293,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x5751;&#x7239;&#xFF1A;&#x5468;&#x4E9E;&#x592B;&#x5B50;&#x3001;&#x516C;&#x5B6B;&#x656C;&#x8072;&#x3001;&#x856D;&#x4F0B;&#x3001;&#x7504;&#x5C0B;</li>
 <li>&#x6551;&#x7236;&#xFF1A;&#x7DF9;&#x7E08;&#x3001;&#x99AE;&#x7DC4;</li>
 <li>&#x88AB;&#x5F8C;&#x5ABD;&#x8650;&#xFF1A;&#x7956;&#x5DF1;&#x3001;&#x859B;&#x82DE;&#x3001;&#x8523;&#x8A61;&#x3001;&#x674E;&#x66C7;&#x3001;&#x738B;&#x7965;</li>
-<li>&#x611A;&#x5B5D;&#xFF1A;&#x7956;&#x5DF1;&#x3001;&#x5B6B;&#x6027;</li>
+<li>&#x611A;&#x5B5D;&#xFF1A;&#x7956;&#x5DF1;&#x3001;&#x5B6B;&#x6027;&#x3001;&#x674E;&#x73ED;</li>
 <li>&#x611A;&#x5FE0;&#xFF1A;&#x738B;&#x7D2F;</li>
 <li>&#x6473;&#x9580;&#xFF1A;&#x6A0A;&#x4F37;&#x3001;&#x66F9;&#x6D2A;&#x3001;&#x53F8;&#x99AC;&#x9A30;</li>
 <li>&#x7D66;&#x541B;&#x4E3B;&#x737B;&#x5B55;&#x5A66;&#xFF1A;&#x5442;&#x4E0D;&#x97CB;&#x3001;&#x6625;&#x7533;&#x541B;</li>
@@ -303,6 +303,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x6D88;&#x6E34;(&#x7CD6;&#x5C3F;&#x75C5;)&#xFF1A;&#x53F8;&#x99AC;&#x76F8;&#x5982;</li>
 <li>&#x7FB8;&#x7635;(&#x80BA;&#x7D50;&#x6838;)&#xFF1A;&#x8CC0;&#x5FAA;</li>
 <li>&#x967D;&#x75FF;&#xFF1A;&#x81A0;&#x897F;&#x738B;&#x5289;&#x7AEF;&#x3001;&#x53F8;&#x99AC;&#x4FDD;</li>
+<li>&#x542E;&#x7670;&#x8210;&#x75D4;&#xFF1A;&#x9127;&#x901A;&#x3001;&#x674E;&#x73ED;</li>
 <li>&#x58C1;&#x4E2D;&#x85CF;&#x66F8;&#xFF1A;&#x5B54;&#x9B92;&#x3001;&#x4F0F;&#x751F;&#x3001;&#x9673;&#x5BF5;&#x66FE;&#x7956;&#x9673;&#x54B8;</li>
 <li>&#x58C1;&#x4E2D;&#x85CF;&#x4EBA;&#xFF1A;&#x6881;&#x4F2F;&#x7389;&#x3001;&#x8D99;&#x6B67;&#x3001;&#x8881;&#x958E;&#x3001;&#x4F0F;&#x7687;&#x540E;</li>
 <li>&#x76F8;&#x9762;&#x5927;&#x5E2B;&#xFF1A;&#x5442;&#x516C;&#x3001;&#x5289;&#x90A6;&#x3001;&#x8A31;&#x8CA0;&#x3001;&#x5510;&#x8209;&#x3001;&#x6731;&#x5EFA;&#x5E73;&#x3001;&#x7BA1;&#x8F05;</li>
@@ -404,7 +405,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x6B12;&#x5DF4;&#xFF1A;&#x51C8;&#x8EAB;&#x4E0D;&#x5FB9;&#x5E95;&#x7684;&#x5BA6;&#x5B98;&#xFF0C;&#x5A36;&#x59BB;&#x751F;&#x5B50;&#xFF0C;&#x540D;&#x5217;&#x516B;&#x4F7F;</li>
 <li>&#x4E09;&#x59D3;&#x7687;&#x540E;&#xFF1A;&#x9127;&#x731B;&#x5973;</li>
 <li>&#x6E1B;&#x80A5;&#x56F0;&#x96E3;&#xFF1A;&#x738B;&#x620E;&#x5B50;&#x738B;&#x7D8F;<code>&#x6709;&#x7F8E;&#x53F7;&#x800C;&#x592A;&#x80A5;&#xFF0C;&#x620E;&#x4EE4;&#x98DF;&#x7CE0;&#xFF0C;&#x800C;&#x80A5;&#x6108;&#x751A;&#x4E5F;&#x3002;</code></li>
-<li>&#x5B5D;&#x611F;&#x52D5;&#x5929;&#x8207;&#x7956;&#x5DF1;&#x6D41;&#x653E;&#x66FE;&#x5B50;&#x6328;&#x6253;&#xFF1B;&#x81E5;&#x51B0;&#x6C42;&#x9BC9;&#x8207;&#x8340;&#x4EE4;&#x50B7;&#x795E;&#xFF1B;&#x54ED;&#x7AF9;&#x751F;&#x7B4D;&#x8207;&#x5B50;&#x590F;&#x5931;&#x660E;&#xFF1B;&#x627C;&#x864E;&#x6551;&#x7236;&#x8207;&#x674E;&#x9035;&#x80CC;&#x6BCD;&#xFF1B;&#x4E73;&#x59D1;&#x4E0D;&#x6020;&#x8207;&#x5F35;&#x84BC;&#x559D;&#x5976;</li>
+<li>&#x5B5D;&#x611F;&#x52D5;&#x5929;&#x8207;&#x7956;&#x5DF1;&#x6D41;&#x653E;&#x66FE;&#x5B50;&#x6328;&#x6253;&#xFF1B;&#x81E5;&#x51B0;&#x6C42;&#x9BC9;&#x8207;&#x8340;&#x4EE4;&#x50B7;&#x795E;&#xFF1B;&#x54ED;&#x7AF9;&#x751F;&#x7B4D;&#x8207;&#x5B50;&#x590F;&#x5931;&#x660E;&#xFF1B;&#x627C;&#x864E;&#x6551;&#x7236;&#x8207;&#x674E;&#x9035;&#x80CC;&#x6BCD;&#xFF1B;&#x4E73;&#x59D1;&#x4E0D;&#x6020;&#x8207;&#x5F35;&#x84BC;&#x559D;&#x5976;&#xFF1B;&#x89AA;&#x5617;&#x6E6F;&#x85E5;&#x76DB;&#x4E16;&#x8207;&#x674E;&#x73ED;&#x56E0;&#x5B5D;&#x5931;&#x570B;</li>
 </ul>
 
       </div>
