--- a/2_世系圖表/2.2_并立政權/晉/林邑國世系圖表.html
+++ b/2_世系圖表/2.2_并立政權/晉/林邑國世系圖表.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>&#x5F8C;&#x8D99;&#x4E16;&#x7CFB;&#x5716;&#x8868;</title>
+      <title>&#x6797;&#x9091;&#x570B;&#x4E16;&#x7CFB;&#x5716;&#x8868;</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -261,97 +261,40 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h1 class="mume-header" id="%E5%BE%8C%E8%B6%99%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8">&#x5F8C;&#x8D99;&#x4E16;&#x7CFB;&#x5716;&#x8868;</h1>
-
-<h2 class="mume-header" id="%E4%B8%96%E7%B3%BB%E8%A1%A8">&#x4E16;&#x7CFB;&#x8868;</h2>
-
-<table>
-<thead>
-<tr>
-<th>&#x5E8F;&#x865F;</th>
-<th>&#x7D22;&#x5F15;&#x865F;</th>
-<th>&#x570B;&#x541B;&#x59D3;&#x540D;</th>
-<th>&#x5F97;&#x4F4D;&#x5E74;</th>
-<th>&#x5931;&#x4F4D;&#x5E74;</th>
-<th>&#x5099;&#x8A3B;</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>1</td>
-<td>17012</td>
-<td>&#x77F3;&#x52D2;</td>
-<td>319</td>
-<td>333</td>
-<td>330&#x5E74;&#x7A31;&#x5E1D;</td>
-</tr>
-<tr>
-<td>2</td>
-<td>18224</td>
-<td>&#x77F3;&#x5F18;</td>
-<td>333</td>
-<td>334</td>
-<td>&#x77F3;&#x864E;&#x5BE6;&#x63A7;</td>
-</tr>
-<tr>
-<td>3</td>
-<td>17356</td>
-<td>&#x77F3;&#x864E;</td>
-<td>334</td>
-<td>349</td>
-<td>&#x7A7A;&#x6A94;&#x671F;&#x5BE6;&#x63A7;&#xFF0C;337&#x5E74;&#x7A31;&#x5927;&#x8D99;&#x5929;&#x738B;</td>
-</tr>
-<tr>
-<td>4</td>
-<td></td>
-<td>&#x77F3;&#x4E16;</td>
-<td>349</td>
-<td>349</td>
-<td>&#x5728;&#x4F4D;21&#x5929;</td>
-</tr>
-<tr>
-<td>5</td>
-<td>18812</td>
-<td>&#x77F3;&#x9075;</td>
-<td>349</td>
-<td>349</td>
-<td>&#x5728;&#x4F4D;183&#x5929;</td>
-</tr>
-<tr>
-<td>6</td>
-<td>18813</td>
-<td>&#x77F3;&#x9452;</td>
-<td>349</td>
-<td>350</td>
-<td>&#x5728;&#x4F4D;103&#x5929;&#xFF0C;&#x88AB;&#x5189;&#x9594;&#x63A7;&#x5236;</td>
-</tr>
-<tr>
-<td>7</td>
-<td></td>
-<td>&#x77F3;&#x7957;</td>
-<td>350</td>
-<td>351</td>
-<td>&#x81EA;&#x7ACB;&#x70BA;&#x5E1D;</td>
-</tr>
-</tbody>
-</table>
-<h2 class="mume-header" id="%E4%B8%96%E7%B3%BB%E5%9C%96">&#x4E16;&#x7CFB;&#x5716;</h2>
-
+      <ul>
+<li>
+<p>&#x6797;&#x9091;&#x738B;&#x570B;&#xFF08;&#x5360;&#x5A46;&#x7B2C;&#x4E00;&#x738B;&#x671D;&#x81F3;&#x7B2C;&#x56DB;&#x738B;&#x671D;&#xFF09;&#xFF0C;192-757</p>
+</li>
+<li>
+<p>&#x50B3;&#x4F4D;&#x5716;</p>
+</li>
+</ul>
 <div class="mermaid">graph TB
 
-&#x77F3;&#x52D2;--&gt;&#x77F3;&#x5F18;
-&#x77F3;&#x52D2;--&#x5802;&#x4F84;--&gt;&#x77F3;&#x864E;
+&#x5340;&#x9023;--&#x6578;&#x4EE3;&#x5F8C;&#x7684;&#x5916;&#x5B6B;--&gt;&#x8303;&#x718A;
+&#x8303;&#x718A;--&gt;&#x8303;&#x9038;
+&#x8303;&#x9038;--&#x8AF8;&#x5B50;&#x88AB;&#x6BBA;--&gt;&#x8303;&#x6587;
+&#x8303;&#x6587;--&gt;&#x8303;&#x4F5B;
+&#x8303;&#x4F5B;--&gt;&#x8303;&#x80E1;&#x9054;
+&#x8303;&#x80E1;&#x9054;--&gt;&#x8303;&#x6575;&#x771F;
+&#x8303;&#x6575;&#x771F;--&#x5916;&#x7525;--&gt;&#x8303;&#x6587;&#x6575;
+&#x8303;&#x6587;&#x6575;--&#x95DC;&#x4FC2;&#x4E0D;&#x660E;--&gt;&#x8303;&#x967D;&#x9081;&#x4E00;&#x4E16;
+&#x8303;&#x967D;&#x9081;&#x4E00;&#x4E16;--&gt;&#x8303;&#x967D;&#x9081;&#x4E8C;&#x4E16;
+&#x8303;&#x967D;&#x9081;&#x4E8C;&#x4E16;--&gt;&#x8303;&#x795E;&#x6210;
+&#x8303;&#x795E;&#x6210;--&#x95DC;&#x4FC2;&#x4E0D;&#x660E;--&gt;&#x8303;&#x7576;&#x6839;&#x7D14;
+&#x8303;&#x7576;&#x6839;&#x7D14;--&#x88AB;&#x8A0E;&#x6EC5;--&gt;&#x8303;&#x8AF8;&#x8FB2;
+&#x8303;&#x8AF8;&#x8FB2;--&gt;&#x8303;&#x6587;&#x6B3E;
+&#x8303;&#x6587;&#x6B3E;--&gt;&#x8303;&#x5929;&#x51F1;
+&#x8303;&#x5929;&#x51F1;--&gt;&#x8303;&#x5F3C;&#x6BF3;&#x8DCB;&#x6469;
+&#x8303;&#x5F3C;&#x6BF3;&#x8DCB;&#x6469;--&#x95DC;&#x4FC2;&#x4E0D;&#x660E;--&gt;&#x9AD8;&#x5F0F;&#x5F8B;&#x9640;&#x7F85;&#x8DCB;&#x6469;
+&#x9AD8;&#x5F0F;&#x5F8B;&#x9640;&#x7F85;&#x8DCB;&#x6469;--&#x95DC;&#x4FC2;&#x4E0D;&#x660E;--&gt;&#x8303;&#x68B5;&#x5FD7;
+&#x8303;&#x68B5;&#x5FD7;--&#x95DC;&#x4FC2;&#x4E0D;&#x660E;--&gt;&#x8303;&#x982D;&#x9ECE;
+&#x8303;&#x982D;&#x9ECE;--&gt;&#x8303;&#x93AE;&#x9F8D;
+&#x8303;&#x93AE;&#x9F8D;--&#x8303;&#x982D;&#x9ECE;&#x5916;&#x5B6B;--&gt;&#x62D4;&#x9640;&#x7F85;&#x9996;&#x7F85;&#x8DCB;&#x6469;
+&#x62D4;&#x9640;&#x7F85;&#x9996;&#x7F85;&#x8DCB;&#x6469;--&#x5973;&#x738B;&#x592B;--&gt;&#x8AF8;&#x845B;&#x5730;
+&#x8AF8;&#x845B;&#x5730;--&gt;&#x6BD7;&#x5EFA;&#x9640;&#x8DCB;&#x6469;&#x4E8C;&#x4E16;
+&#x6BD7;&#x5EFA;&#x9640;&#x8DCB;&#x6469;&#x4E8C;&#x4E16;--&#x95DC;&#x4FC2;&#x4E0D;&#x660E;--&gt;&#x5F8B;&#x9640;&#x7F85;&#x8DCB;&#x6469;&#x4E8C;&#x4E16;
 
-&#x77F3;&#x864E;--&gt;&#x77F3;&#x9452;
-&#x77F3;&#x864E;--&gt;&#x77F3;&#x9075;
-&#x77F3;&#x864E;--&gt;&#x77F3;&#x7957;
-&#x77F3;&#x864E;--&gt;&#x77F3;&#x4E16;
-
-&#x77F3;&#x864E;--&#x990A;&#x5B50;--&gt;&#x5189;&#x77BB;
-&#x5189;&#x77BB;--&gt;&#x5189;&#x9594;
-
-classDef king fill:#ffee00
-class &#x77F3;&#x52D2;,&#x77F3;&#x5F18;,&#x77F3;&#x864E;,&#x77F3;&#x9452;,&#x77F3;&#x9075;,&#x77F3;&#x7957;,&#x77F3;&#x4E16; king
 </div>
       </div>
       
