--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -266,7 +266,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <ul>
 <li>&#x62D2;&#x7D55;&#x6649;&#x5347;&#xFF1A;&#x7533;&#x5305;&#x80E5;&#x3001;&#x738B;&#x880B;&#x3001;&#x5B54;&#x9738;&#x3001;&#x5289;&#x6137;&#x3001;&#x7530;&#x7587;</li>
 <li>&#x62D2;&#x7D55;&#x7A31;&#x5E1D;&#x738B;&#xFF1A;&#x5B63;&#x672D;&#x3001;&#x516C;&#x5B50;&#x95AD;&#x3001;&#x5289;&#x865E;</li>
-<li>&#x5F8C;&#x5BAE;&#x9054;&#x4EBA;&#xFF1A;&#x7530;&#x6210;&#x5B50;&#x3001;&#x5F35;&#x84BC;&#x3001;&#x4E2D;&#x5C71;&#x9756;&#x738B;&#x5289;&#x52DD;&#x3001;&#x7530;&#x86A1;&#x3001;&#x66F9;&#x53E1;&#x3001;&#x53F8;&#x99AC;&#x708E;&#x3001;&#x5289;&#x8070;</li>
+<li>&#x5F8C;&#x5BAE;&#x9054;&#x4EBA;&#xFF1A;&#x7530;&#x6210;&#x5B50;&#x3001;&#x5F35;&#x84BC;&#x3001;&#x4E2D;&#x5C71;&#x9756;&#x738B;&#x5289;&#x52DD;&#x3001;&#x7530;&#x86A1;&#x3001;&#x66F9;&#x53E1;&#x3001;&#x53F8;&#x99AC;&#x708E;&#x3001;&#x5289;&#x8070;&#x3001;&#x77F3;&#x864E;</li>
 <li>&#x70F9;&#x5B50;&#x98DF;&#x5B50;&#xFF1A;&#x6613;&#x7259;&#x3001;&#x6A02;&#x7F8A;</li>
 <li>&#x4EBA;&#x529B;&#x5927;&#x725B;&#xFF1A;&#x7FDF;&#x749C;&#x3001;&#x66B4;&#x52DD;&#x4E4B;&#x3001;&#x9127;&#x9A2D;&#x3001;&#x9673;&#x5FE0;&#x3001;&#x738B;&#x9F94;&#x3001;&#x66F9;&#x9A30;&#x3001;&#x8340;&#x5F67;&#x3001;&#x53F8;&#x99AC;&#x5FBD;&#x3001;&#x5C71;&#x6FE4;&#x3001;&#x738B;&#x5C0E;</li>
 <li>&#x53AD;&#x52DD;&#x5236;&#x6575;&#xFF1A;&#x738B;&#x83BD;&#x3001;&#x53F8;&#x99AC;&#x502B;</li>
