--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -352,7 +352,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x5C60;&#x4F2F;&#xFF1A;&#x56B4;&#x5EF6;&#x5E74;&#x3001;&#x82DF;&#x665E;</li>
 <li>&#x98DF;&#x4EBA;&#x9B54;&#xFF1A;&#x7A0B;&#x6631;&#x3001;&#x5F35;&#x65B9;&#x3001;&#x77F3;&#x9083;</li>
 <li>&#x76DC;&#x5893;&#x9054;&#x4EBA;&#xFF1A;&#x5289;&#x53BB;&#x3001;&#x66F9;&#x64CD;&#x3001;&#x5442;&#x5E03;&#x3001;&#x6EAB;&#x97DC;&#x3001;&#x5289;&#x8C6B;&#x3001;&#x694A;&#x7489;&#x771F;&#x8FE6;&#x3001;&#x9673;&#x5949;&#x3001;&#x4E7E;&#x9686;&#x3001;&#x5B6B;&#x6BBF;&#x82F1;</li>
-<li>&#x88DD;&#x760B;&#x5927;&#x5E2B;&#xFF1A;&#x7B95;&#x5B50;&#x3001;&#x5B6B;&#x81CF;&#x3001;&#x84AF;&#x5FB9;&#x3001;&#x97CB;&#x7384;&#x6210;&#x3001;&#x8CC0;&#x5FAA;&#x3001;&#x6731;&#x68E3;</li>
+<li>&#x88DD;&#x760B;&#x5927;&#x5E2B;&#xFF1A;&#x7B95;&#x5B50;&#x3001;&#x5B6B;&#x81CF;&#x3001;&#x84AF;&#x5FB9;&#x3001;&#x97CB;&#x7384;&#x6210;&#x3001;&#x8CC0;&#x5FAA;&#x3001;&#x6155;&#x5BB9;&#x7FF0;&#x3001;&#x6731;&#x68E3;</li>
 <li>&#x88DD;&#x6B7B;&#x5927;&#x5E2B;&#xFF1A;&#x675C;&#x6839;</li>
 <li>&#x88DD;&#x75C5;&#x5927;&#x5E2B;&#xFF1A;&#x53F8;&#x99AC;&#x61FF;&#x3001;&#x885B;&#x74D8;&#x3001;&#x738B;&#x620E;</li>
 <li>&#x88DD;&#x9189;&#x5927;&#x5E2B;&#xFF1A;&#x738B;&#x5141;&#x4E4B;</li>
