--- a/5_筆記/资治通鉴96.html
+++ b/5_筆記/资治通鉴96.html
@@ -307,7 +307,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <blockquote>
 <p>&#x71D5;&#x524D;&#x519B;&#x5E08;&#x6155;&#x5BB9;&#x8BC4;-&gt;&#x5F90;&#x5DDE;&#x523A;&#x53F2;&#xFF0C;&#x5047;&#x8282;</p>
 </blockquote>
-<h2 class="mume-header" id="80708-%E8%94%A1%E8%AC%A8%E6%AD%A2%E9%99%B3%E5%85%89%E5%8F%8A%E6%99%89%E8%B6%99%E7%9B%B8%E6%94%BB">80708 &#x8521;&#x8B28;&#x6B62;&#x9673;&#x5149;&#x53CA;&#x6649;&#x8D99;&#x76F8;&#x653B;</h2>
+<h2 class="mume-header" id="80708-%E8%94%A1%E8%AC%A8%E6%AD%A2%E9%99%B3%E5%85%89%E5%8F%8A%E5%BE%8C%E8%B6%99%E7%A0%B4%E9%82%BE%E5%9F%8E">80708 &#x8521;&#x8B28;&#x6B62;&#x9673;&#x5149;&#x53CA;&#x5F8C;&#x8D99;&#x7834;&#x90BE;&#x57CE;</h2>
 
 <blockquote>
 <p>&#x65F6;&#x5DE6;&#x536B;&#x5C06;&#x519B;&#x9648;&#x5149;&#x8BF7;&#x4F10;&#x8D75;-&gt;&#x5047;&#x7BC0;&#xFF0C;&#x93AE;&#x856A;&#x6E56;</p>
@@ -335,7 +335,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <blockquote>
 <p>&#x6625;&#xFF0C;&#x6B63;&#x6708;&#xFF0C;&#x71D5;&#x738B;&#x769D;&#x4F7F;&#x5510;&#x56FD;&#x5185;&#x53F2;&#x9633;&#x88D5;&#x7B49;&#x7B51;&#x57CE;&#x4E8E;&#x67F3;&#x57CE;&#x4E4B;&#x5317;-&gt;&#x4E2D;&#x5C09;&#x90D1;&#x6797;&#x4E3A;&#x519B;&#x8C18;&#x796D;&#x6D12;</p>
 </blockquote>
-<h2 class="mume-header" id="80713-%E6%85%95%E5%AE%B9%E6%81%AA%E9%8E%AE%E9%AB%98%E5%8F%A5%E9%BA%97%E5%8F%8A%E6%9D%8E%E5%A3%BD%E5%AD%B8%E5%A3%9E">80713 &#x6155;&#x5BB9;&#x606A;&#x93AE;&#x9AD8;&#x53E5;&#x9E97;&#x53CA;&#x674E;&#x58FD;&#x5B78;&#x58DE;</h2>
+<h2 class="mume-header" id="80713-%E5%8C%88%E5%A5%B4%E5%8A%89%E8%99%8E%E6%AD%BB%E5%8F%8A%E6%9D%8E%E5%A3%BD%E5%AD%B8%E5%A3%9E">80713 &#x5308;&#x5974;&#x5289;&#x864E;&#x6B7B;&#x53CA;&#x674E;&#x58FD;&#x5B78;&#x58DE;</h2>
 
 <blockquote>
 <p>&#x516B;&#x6708;&#xFF0C;&#x8F9B;&#x9149;&#xFF0C;&#x4E1C;&#x6D77;&#x54C0;&#x738B;&#x51B2;&#x85A8;-&gt;&#x601D;&#x4E71;&#x8005;&#x4F17;&#x77E3;</p>
