完成卷97，補充宇文鮮卑世系
Former-commit-id: 977c8ea943342420f06ff5a714f424d0dbe566ec

--- a/2_世系圖表/2.2_并立政權/晉/宇文鮮卑世系圖表.html
+++ b/2_世系圖表/2.2_并立政權/晉/宇文鮮卑世系圖表.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>&#x6210;&#x6F22;&#x4E16;&#x7CFB;&#x5716;&#x8868;</title>
+      <title>&#x5B87;&#x6587;&#x9BAE;&#x5351;&#x4E16;&#x7CFB;&#x5716;&#x8868;</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -261,7 +261,7 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h1 class="mume-header" id="%E6%88%90%E6%BC%A2%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8">&#x6210;&#x6F22;&#x4E16;&#x7CFB;&#x5716;&#x8868;</h1>
+      <h1 class="mume-header" id="%E5%AE%87%E6%96%87%E9%AE%AE%E5%8D%91%E4%B8%96%E7%B3%BB%E5%9C%96%E8%A1%A8">&#x5B87;&#x6587;&#x9BAE;&#x5351;&#x4E16;&#x7CFB;&#x5716;&#x8868;</h1>
 
 <h2 class="mume-header" id="%E4%B8%96%E7%B3%BB%E8%A1%A8">&#x4E16;&#x7CFB;&#x8868;</h2>
 
@@ -278,95 +278,110 @@ pre[data-line] .line-highlight[data-end]:after {
 </thead>
 <tbody>
 <tr>
+<td>-3</td>
+<td></td>
+<td>&#x845B;&#x70CF;&#x83DF;</td>
+<td>0</td>
+<td>0</td>
+<td>&#x50B3;&#x8AAA;&#x4E2D;&#x7684;&#x59CB;&#x7956;&#xFF0C;&#x51FA;&#x81EA;&#x708E;&#x5E1D;</td>
+</tr>
+<tr>
 <td>-2</td>
-<td>16314</td>
-<td>&#x674E;&#x7279;</td>
-<td>302</td>
-<td>303</td>
-<td>&#x5960;&#x57FA;&#x8005;</td>
+<td></td>
+<td>&#x5B87;&#x6587;&#x666E;&#x56DE;</td>
+<td>0</td>
+<td>0</td>
+<td>&#x50B3;&#x8AAA;&#x4E2D;&#x7684;&#x59CB;&#x7956;&#xFF0C;&#x62FE;&#x5F97;&#x4E09;&#x7389;&#x74BD;&#xFF0C;&#x547D;&#x540D;&#x5B87;&#x6587;</td>
 </tr>
 <tr>
 <td>-1</td>
-<td>16316</td>
-<td>&#x674E;&#x6D41;</td>
-<td>303</td>
-<td>303</td>
-<td>&#x63A5;&#x73ED;&#x5960;&#x57FA;&#x8005;</td>
+<td></td>
+<td>&#x5B87;&#x6587;&#x83AB;&#x90A3;</td>
+<td>0</td>
+<td>0</td>
+<td>&#x5B87;&#x6587;&#x666E;&#x56DE;&#x5B50;&#xFF0C;&#x5357;&#x9077;&#x907C;&#x897F;</td>
 </tr>
 <tr>
 <td>1</td>
-<td>16686</td>
-<td>&#x674E;&#x96C4;</td>
-<td>303</td>
-<td>334</td>
-<td>304&#x5E74;&#x7A31;&#x738B;&#xFF0C;306&#x5E74;&#x7A31;&#x5E1D;&#xFF0C;&#x5B9A;&#x570B;&#x865F;&#x70BA;&#x6210;</td>
+<td>16281</td>
+<td>&#x5B87;&#x6587;&#x83AB;&#x69D0;</td>
+<td>0</td>
+<td>293</td>
+<td>&#x975E;&#x9996;&#x4EFB;&#xFF0C;&#x4F46;&#x524D;&#x53F2;&#x4E0D;&#x53EF;&#x8003;</td>
 </tr>
 <tr>
 <td>2</td>
-<td>18405</td>
-<td>&#x674E;&#x73ED;</td>
-<td>334</td>
-<td>334</td>
+<td>16282</td>
+<td>&#x5B87;&#x6587;&#x666E;&#x64A5;</td>
+<td>293</td>
+<td>0</td>
 <td></td>
 </tr>
 <tr>
 <td>3</td>
-<td>18854</td>
-<td>&#x674E;&#x671F;</td>
-<td>334</td>
-<td>338</td>
+<td></td>
+<td>&#x5B87;&#x6587;&#x4E18;&#x4E0D;&#x52E4;</td>
+<td>0</td>
+<td>0</td>
 <td></td>
 </tr>
 <tr>
 <td>4</td>
-<td>16916</td>
-<td>&#x674E;&#x58FD;</td>
-<td>338</td>
-<td>343</td>
-<td>338&#x5E74;&#x6539;&#x570B;&#x865F;&#x70BA;&#x6F22;</td>
+<td>16718</td>
+<td>&#x5B87;&#x6587;&#x83AB;&#x73EA;</td>
+<td>0</td>
+<td>0</td>
+<td></td>
 </tr>
 <tr>
 <td>5</td>
-<td>19010</td>
-<td>&#x674E;&#x52E2;</td>
-<td>343</td>
-<td>347</td>
-<td>&#x6649;&#x6EC5;&#x6210;&#x6F22;&#x4E4B;&#x6230;&#x88AB;&#x6853;&#x6EAB;&#x6EC5;</td>
+<td></td>
+<td>&#x5B87;&#x6587;&#x905C;&#x6635;&#x5EF6;</td>
+<td>0</td>
+<td>0</td>
+<td></td>
 </tr>
 <tr>
-<td>11</td>
-<td>17848</td>
-<td>&#x8303;&#x8CC1;</td>
-<td>347</td>
-<td>349</td>
-<td>&#x6210;&#x6F22;&#x6EC5;&#x5F8C;&#x88AB;&#x64C1;&#x7ACB;&#x70BA;&#x5E1D;</td>
+<td>6</td>
+<td>18426</td>
+<td>&#x5B87;&#x6587;&#x4E5E;&#x5F97;&#x9F9C;</td>
+<td>0</td>
+<td>333</td>
+<td></td>
+</tr>
+<tr>
+<td>7</td>
+<td>18028</td>
+<td>&#x5B87;&#x6587;&#x9038;&#x8C46;&#x6B78;</td>
+<td>333</td>
+<td>344</td>
+<td>&#x88AB;&#x6155;&#x5BB9;&#x769D;&#x6EC5;&#x570B;&#xFF0C;&#x4E00;&#x8AAA;&#x6EC5;&#x65BC;345&#x5E74;</td>
 </tr>
 </tbody>
 </table>
 <h2 class="mume-header" id="%E4%B8%96%E7%B3%BB%E5%9C%96">&#x4E16;&#x7CFB;&#x5716;</h2>
 
+<ul>
+<li>&#x5B87;&#x6587;&#x90E8;&#x6EC5;&#x4EA1;&#x5F8C;&#x6F14;&#x5316;&#x70BA;&#x5EAB;&#x83AB;&#x595A;&#x65CF;&#xFF08;&#x595A;&#x65CF;&#xFF09;&#x53CA;&#x5951;&#x4E39;&#x65CF;</li>
+</ul>
 <div class="mermaid">graph TB
 
-&#x674E;&#x6155;--&gt;&#x674E;&#x8F14;
-&#x674E;&#x6155;--&gt;&#x674E;&#x7279;
-&#x674E;&#x6155;--&gt;&#x674E;&#x5EA0;
-&#x674E;&#x6155;--&gt;&#x674E;&#x6D41;
-&#x674E;&#x6155;--&gt;&#x674E;&#x9A64;
+&#x845B;&#x70CF;&#x83DF;--&#x6578;&#x4EE3;--&gt;&#x5B87;&#x6587;&#x666E;&#x56DE;
+&#x5B87;&#x6587;&#x666E;&#x56DE;--&gt;&#x5B87;&#x6587;&#x83AB;&#x90A3;
+&#x5B87;&#x6587;&#x83AB;&#x90A3;--&#x6578;&#x4EE3;--&gt;&#x5B87;&#x6587;&#x83AB;&#x69D0;&#x7236;
 
-&#x674E;&#x7279;--&gt;&#x674E;&#x8569;
-&#x674E;&#x7279;--&gt;&#x674E;&#x96C4;
-&#x674E;&#x9A64;--&gt;&#x674E;&#x58FD;
+&#x5B87;&#x6587;&#x83AB;&#x69D0;&#x7236;--&gt;&#x5B87;&#x6587;&#x83AB;&#x69D0;
+&#x5B87;&#x6587;&#x83AB;&#x69D0;&#x7236;--&gt;&#x5B87;&#x6587;&#x666E;&#x64A5;
 
-&#x674E;&#x8569;--&gt;&#x674E;&#x73ED;
-&#x674E;&#x96C4;--&gt;&#x674E;&#x671F;
-&#x674E;&#x96C4;--&gt;&#x674E;&#x8D8A;
-&#x674E;&#x58FD;--&gt;&#x674E;&#x52E2;
+&#x5B87;&#x6587;&#x666E;&#x64A5;--&gt;&#x5B87;&#x6587;&#x4E18;&#x4E0D;&#x52E4;
+&#x5B87;&#x6587;&#x4E18;&#x4E0D;&#x52E4;--&gt;&#x5B87;&#x6587;&#x83AB;&#x73EA;
+&#x5B87;&#x6587;&#x83AB;&#x73EA;--&gt;&#x5B87;&#x6587;&#x905C;&#x6635;&#x5EF6;
+&#x5B87;&#x6587;&#x905C;&#x6635;&#x5EF6;--&gt;&#x5B87;&#x6587;&#x4E5E;&#x5F97;&#x9F9C;
+
+&#x5B87;&#x6587;&#x4E5E;&#x5F97;&#x9F9C;--&#x6771;&#x90E8;&#x9996;&#x9818;--&gt;&#x5B87;&#x6587;&#x9038;&#x8C46;&#x6B78;
 
 classDef king fill:#ffee00
-class &#x674E;&#x96C4;,&#x674E;&#x73ED;,&#x674E;&#x671F;,&#x674E;&#x58FD;,&#x674E;&#x52E2; king
-
-classDef founder fill:#ffffee
-class &#x674E;&#x7279;,&#x674E;&#x6D41; founder
+class &#x5B87;&#x6587;&#x83AB;&#x69D0;,&#x5B87;&#x6587;&#x666E;&#x64A5;,&#x5B87;&#x6587;&#x4E18;&#x4E0D;&#x52E4;,&#x5B87;&#x6587;&#x83AB;&#x73EA;,&#x5B87;&#x6587;&#x905C;&#x6635;&#x5EF6;,&#x5B87;&#x6587;&#x4E5E;&#x5F97;&#x9F9C;,&#x5B87;&#x6587;&#x9038;&#x8C46;&#x6B78; king
 </div>
       </div>
       
