更新至卷98節9，添加前秦世系
Former-commit-id: d3ef0c10d5f5042fa469bb5adaf1860e08359156

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -394,6 +394,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x88AB;&#x59E6;&#x5C38;&#xFF1A;&#x5442;&#x540E;&#x3001;&#x6F22;&#x6853;&#x5E1D;&#x99AE;&#x8CB4;&#x4EBA;</li>
 <li>&#x5FC3;&#x52D5;&#x6551;&#x99D5;&#xFF1A;&#x91D1;&#x65E5;&#x78FE;&#x3001;&#x8A31;&#x891A;</li>
 <li>&#x81EA;&#x6200;&#x72C2;&#xFF1A;&#x4F55;&#x664F;</li>
+<li>&#x88AB;&#x6253;&#x9DC4;&#x8840;&#xFF1A;&#x77F3;&#x9075;-&#x5189;&#x9594;(&#x52AA;&#x529B;&#xFF01;&#x4E8B;&#x6210;&#xFF0C;&#x4EE5;&#x723E;&#x70BA;&#x5132;&#x8CB3;)&#x3001;&#x6731;&#x68E3;-&#x6731;&#x9AD8;&#x7166;(&#x52C9;&#x4E4B;&#xFF01;&#x4E16;&#x5B50;&#x591A;&#x75BE;)</li>
 </ul>
 <h1 class="mume-header" id="%E9%9B%9C%E8%AA%AA">&#x96DC;&#x8AAA;</h1>
 
