--- a/2_世系圖表/2.2_并立政權/晉/段部鮮卑世系圖表.html
+++ b/2_世系圖表/2.2_并立政權/晉/段部鮮卑世系圖表.html
@@ -265,9 +265,6 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <h2 class="mume-header" id="%E4%B8%96%E7%B3%BB%E8%A1%A8">&#x4E16;&#x7CFB;&#x8868;</h2>
 
-<ul>
-<li>&#x6BB5;&#x52D9;&#x52FF;&#x5875;&#x81F3;&#x6BB5;&#x907C;&#xFF0C;&#x70BA;&#x76F8;&#x5C0D;&#x6B63;&#x7D71;&#x7684;&#x907C;&#x897F;&#x516C;&#x968E;&#x6BB5;</li>
-</ul>
 <table>
 <thead>
 <tr>
@@ -360,7 +357,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <td>&#x6BB5;&#x8B77;&#x907C;</td>
 <td>325</td>
 <td>338</td>
-<td>338&#x5E74;&#x88AB;&#x77F3;&#x864E;&#x6EC5;&#xFF0C;&#x964D;&#x524D;&#x71D5;&#x5171;&#x653B;&#x5F8C;&#x8D99;&#xFF0C;&#x53C8;&#x6B32;&#x53CD;&#x71D5;&#x88AB;&#x8A85;</td>
+<td>338&#x5E74;&#x5F8C;&#x8D99;&#x524D;&#x71D5;&#x593E;&#x64CA;&#xFF0C;&#x88AB;&#x77F3;&#x864E;&#x6EC5;&#xFF0C;&#x5BE6;&#x8CEA;&#x6BB5;&#x90E8;&#x9BAE;&#x5351;&#x6EC5;&#x4EA1;</td>
 </tr>
 <tr>
 <td>10</td>
@@ -369,30 +366,35 @@ pre[data-line] .line-highlight[data-end]:after {
 <td>&#x6BB5;&#x9B31;&#x862D;</td>
 <td>343</td>
 <td>0</td>
-<td>&#x77F3;&#x864E;&#x4F7F;&#x56DE;&#x907C;&#x897F;&#x5FA9;&#x570B;</td>
+<td>&#x77F3;&#x864E;&#x4F7F;&#x56DE;&#x907C;&#x897F;&#x4EE4;&#x652F;&#x5FA9;&#x570B;</td>
 </tr>
 <tr>
 <td>11</td>
-<td></td>
+<td>19469</td>
 <td>&#x6BB5;&#x9F95;</td>
 <td></td>
-<td>0</td>
+<td>350</td>
 <td>356</td>
-<td>&#x81EA;&#x7A31;&#x9F4A;&#x738B;&#xFF0C;&#x964D;&#x6771;&#x6649;&#xFF0C;&#x964D;&#x524D;&#x71D5;</td>
+<td>&#x7E7C;&#x627F;&#x6BB5;&#x862D;&#xFF0C;&#x81EA;&#x7A31;&#x9F4A;&#x738B;&#xFF0C;&#x964D;&#x6771;&#x6649;&#xFF0C;&#x964D;&#x524D;&#x71D5;</td>
 </tr>
 <tr>
 <td>12</td>
-<td></td>
+<td>19467</td>
 <td>&#x6BB5;&#x52E4;</td>
 <td></td>
-<td>350</td>
 <td>352</td>
-<td>350&#x5E74;&#x5272;&#x64DA;&#x9ECE;&#x967D;&#xFF0C;352&#x5E74;&#x81EA;&#x7A31;&#x8D99;&#x5E1D;&#xFF0C;&#x88AB;&#x524D;&#x71D5;&#x6BBA;</td>
+<td>352</td>
+<td>352&#x5E74;&#x81EA;&#x7A31;&#x8D99;&#x5E1D;&#xFF0C;&#x88AB;&#x524D;&#x71D5;&#x6BBA;</td>
 </tr>
 </tbody>
 </table>
 <h2 class="mume-header" id="%E4%B8%96%E7%B3%BB%E5%9C%96">&#x4E16;&#x7CFB;&#x5716;</h2>
 
+<ul>
+<li>&#x6BB5;&#x52D9;&#x52FF;&#x5875;&#x81F3;&#x6BB5;&#x907C;&#xFF0C;&#x70BA;&#x76F8;&#x5C0D;&#x6B63;&#x7D71;&#x7684;&#x907C;&#x897F;&#x516C;&#x968E;&#x6BB5;</li>
+<li>&#x6BB5;&#x862D;&#x88AB;&#x77F3;&#x864E;&#x5FA9;&#x570B;&#xFF0C;&#x5F8C;&#x6BB5;&#x9F95;&#x5EFA;&#x7ACB;&#x6BB5;&#x9F4A;</li>
+<li>&#x6BB5;&#x52E4;&#x53D7;&#x5189;&#x9594;&#x5F71;&#x97FF;&#x77ED;&#x66AB;&#x7A31;&#x5E1D;</li>
+</ul>
 <div class="mermaid">graph TB
 
 &#x6BB5;&#x65E5;&#x9678;&#x7737;&#x7236;--&gt;&#x6BB5;&#x65E5;&#x9678;&#x7737;
