--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -331,7 +331,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x523B;&#x82E6;&#x8B80;&#x66F8;&#xFF1A;&#x6731;&#x8CB7;&#x81E3;&#x3001;&#x5152;&#x5BEC;&#x3001;&#x8DEF;&#x6EAB;&#x8212;&#x3001;&#x5321;&#x8861;</li>
 <li>&#x795E;&#x7AE5;&#xFF1A;&#x9805;&#x6A50;&#x3001;&#x7518;&#x7F85;&#x3001;&#x5B54;&#x878D;&#x3001;&#x66F9;&#x6C96;&#x3001;&#x5468;&#x4E0D;&#x7591;</li>
 <li>&#x5E38;&#x6557;&#x5C07;&#x8ECD;&#xFF1A;&#x674E;&#x5EE3;&#x3001;&#x674E;&#x5EE3;&#x5229;&#x3001;&#x9127;&#x79B9;&#x3001;&#x590F;&#x4FAF;&#x60C7;&#x3001;&#x9EC3;&#x7956;&#x3001;&#x738B;&#x7384;&#x8B28;&#x3001;&#x674E;&#x666F;&#x9686;</li>
-<li>&#x53CD;&#x5FA9;&#x6416;&#x64FA;&#xFF1A;&#x5F90;&#x9F95;&#x3001;&#x738B;&#x64E2;</li>
+<li>&#x53CD;&#x5FA9;&#x6416;&#x64FA;&#xFF1A;&#x5F90;&#x9F95;&#x3001;&#x738B;&#x64E2;&#x3001;&#x5341;&#x516D;&#x570B;&#x5F35;&#x5E73;</li>
 <li>&#x7336;&#x8C6B;&#x4E0D;&#x6C7A;&#xFF1A;&#x7518;&#x5353;</li>
 <li>&#x6B7B;&#x524D;&#x66B4;&#x64CA;&#xFF1A;&#x9805;&#x7FBD;&#x3001;&#x6BB5;&#x6587;&#x9D26;</li>
 <li>&#x5F37;&#x529B;&#x523A;&#x5BA2;&#xFF1A;&#x516C;&#x5B6B;&#x8FF0;&#x3001;&#x4EFB;&#x5C1A;</li>
@@ -356,7 +356,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x88DD;&#x6B7B;&#x5927;&#x5E2B;&#xFF1A;&#x675C;&#x6839;</li>
 <li>&#x88DD;&#x75C5;&#x5927;&#x5E2B;&#xFF1A;&#x53F8;&#x99AC;&#x61FF;&#x3001;&#x885B;&#x74D8;&#x3001;&#x738B;&#x620E;</li>
 <li>&#x88DD;&#x9189;&#x5927;&#x5E2B;&#xFF1A;&#x738B;&#x5141;&#x4E4B;</li>
-<li>&#x7368;&#x773C;&#x9F8D;&#xFF1A;&#x675C;&#x6B3D;&#x3001;&#x590F;&#x4FAF;&#x60C7;&#x3001;&#x4E01;&#x5100;&#x3001;&#x53F8;&#x99AC;&#x5E2B;</li>
+<li>&#x7368;&#x773C;&#x9F8D;&#xFF1A;&#x675C;&#x6B3D;&#x3001;&#x590F;&#x4FAF;&#x60C7;&#x3001;&#x4E01;&#x5100;&#x3001;&#x53F8;&#x99AC;&#x5E2B;&#x3001;&#x82FB;&#x751F;</li>
 <li>&#x9AD8;&#x983B;&#x7387;&#x72AF;&#x7F6A;&#xFF1A;&#x5289;&#x8CC0;&#x3001;&#x5289;&#x7ACB;</li>
 <li>&#x80CC;&#x934B;&#x4FE0;&#xFF1A;&#x590F;&#x4FAF;&#x85E9;&#x3001;&#x9B6F;&#x5321;&#x3001;&#x6210;&#x6FDF;&#x3001;&#x99AE;&#x6590;&#x3001;&#x90B5;&#x7587;</li>
 <li>&#x6BBA;&#x5B50;&#xFF1A;&#x77F3;&#x788F;&#x3001;&#x91D1;&#x65E5;&#x78FE;&#x3001;&#x6F22;&#x6210;&#x5E1D;&#x3001;&#x738B;&#x7ACB;&#x3001;&#x738B;&#x83BD;</li>
@@ -373,6 +373,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x7D05;&#x773C;&#xFF1A;&#x5289;&#x66DC;</li>
 <li>&#x91CD;&#x77B3;&#xFF1A;&#x9805;&#x7FBD;&#x3001;&#x5442;&#x5149;&#x3001;&#x6C88;&#x7D04;&#x3001;&#x9B5A;&#x4FF1;&#x7F85;&#x3001;&#x6731;&#x53CB;&#x5B5C;&#x3001;&#x5317;&#x6F22;&#x5289;&#x5D07;&#x3001;&#x674E;&#x715C;&#x3001;&#x5353;&#x5CA9;&#x660E;&#x3001;&#x660E;&#x7389;&#x73CD;&#x3001;&#x9867;&#x708E;&#x6B66;</li>
 <li>&#x4E09;&#x4E73;&#xFF1A;&#x674E;&#x6DF5;</li>
+<li>&#x5927;&#x982D;&#xFF1A;&#x82FB;&#x96C4;</li>
 <li>&#x5DE8;&#x4EBA;&#xFF1A;&#x962E;&#x7FC1;&#x4EF2;&#x3001;&#x5DE8;&#x6BCB;&#x9738;</li>
 <li>&#x9B54;&#x8853;&#x5E2B;&#xFF1A;&#x9ECE;&#x8ED2;&#x5584;&#x7729;&#x4EBA;&#x3001;&#x6D77;&#x897F;&#x5E7B;&#x4EBA;</li>
 <li>&#x842C;&#x4EBA;&#x8FF7;&#xFF1A;&#x9EC3;&#x61B2;&#x3001;&#x6EAB;&#x5DA0;</li>
