--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -264,8 +264,9 @@ pre[data-line] .line-highlight[data-end]:after {
       <h1 class="mume-header" id="%E5%A5%87%E8%91%A9%E5%BA%8F%E5%88%97">&#x5947;&#x8469;&#x5E8F;&#x5217;</h1>
 
 <ul>
-<li>&#x62D2;&#x7D55;&#x6649;&#x5347;&#xFF1A;&#x7533;&#x5305;&#x80E5;&#x3001;&#x738B;&#x880B;&#x3001;&#x5B54;&#x9738;&#x3001;&#x5289;&#x6137;&#x3001;&#x7530;&#x7587;</li>
+<li>&#x62D2;&#x7D55;&#x6649;&#x5347;&#xFF1A;&#x7533;&#x5305;&#x80E5;&#x3001;&#x738B;&#x880B;&#x3001;&#x5B54;&#x9738;&#x3001;&#x5289;&#x6137;&#x3001;&#x7530;&#x7587;&#x3001;&#x8521;&#x8B28;</li>
 <li>&#x62D2;&#x7D55;&#x7A31;&#x5E1D;&#x738B;&#xFF1A;&#x5B63;&#x672D;&#x3001;&#x516C;&#x5B50;&#x95AD;&#x3001;&#x5289;&#x865E;</li>
+<li>&#x62D2;&#x7D76;&#x51FA;&#x4ED5;&#xFF1A;&#x8F9B;&#x8B10;</li>
 <li>&#x5F8C;&#x5BAE;&#x9054;&#x4EBA;&#xFF1A;&#x7530;&#x6210;&#x5B50;&#x3001;&#x5F35;&#x84BC;&#x3001;&#x4E2D;&#x5C71;&#x9756;&#x738B;&#x5289;&#x52DD;&#x3001;&#x7530;&#x86A1;&#x3001;&#x66F9;&#x53E1;&#x3001;&#x53F8;&#x99AC;&#x708E;&#x3001;&#x5289;&#x8070;&#x3001;&#x77F3;&#x864E;</li>
 <li>&#x70F9;&#x5B50;&#x98DF;&#x5B50;&#xFF1A;&#x6613;&#x7259;&#x3001;&#x6A02;&#x7F8A;</li>
 <li>&#x4EBA;&#x529B;&#x5927;&#x725B;&#xFF1A;&#x7FDF;&#x749C;&#x3001;&#x66B4;&#x52DD;&#x4E4B;&#x3001;&#x9127;&#x9A2D;&#x3001;&#x9673;&#x5FE0;&#x3001;&#x738B;&#x9F94;&#x3001;&#x66F9;&#x9A30;&#x3001;&#x8340;&#x5F67;&#x3001;&#x53F8;&#x99AC;&#x5FBD;&#x3001;&#x5C71;&#x6FE4;&#x3001;&#x738B;&#x5C0E;</li>
@@ -335,6 +336,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x7336;&#x8C6B;&#x4E0D;&#x6C7A;&#xFF1A;&#x7518;&#x5353;</li>
 <li>&#x6B7B;&#x524D;&#x66B4;&#x64CA;&#xFF1A;&#x9805;&#x7FBD;&#x3001;&#x6BB5;&#x6587;&#x9D26;</li>
 <li>&#x5F37;&#x529B;&#x523A;&#x5BA2;&#xFF1A;&#x516C;&#x5B6B;&#x8FF0;&#x3001;&#x4EFB;&#x5C1A;</li>
+<li>&#x795E;&#x5C04;&#x624B;&#xFF1A;&#x990A;&#x7531;&#x57FA;&#x3001;&#x5442;&#x5E03;&#x3001;&#x8CC8;&#x5805;</li>
 <li>&#x6F22;&#x5978;&#xFF1A;&#x4E2D;&#x884C;&#x8AAC;&#x3001;&#x8D99;&#x4FE1;&#x3001;&#x885B;&#x5F8B;&#x3001;&#x76E7;&#x82B3;&#x3001;&#x6F22;&#x5978;&#x97D3;&#x742E;</li>
 <li>&#x5ABD;&#x5BF6;&#xFF1A;&#x5171;&#x53D4;&#x6BB5;&#x3001;&#x6881;&#x738B;&#x5289;&#x6B66;&#x3001;&#x662D;&#x5E73;&#x541B;</li>
 <li>&#x7238;&#x5BF6;&#xFF1A;&#x5DDE;&#x5401;</li>
