--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -376,22 +376,24 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x91CD;&#x77B3;&#xFF1A;&#x9805;&#x7FBD;&#x3001;&#x5442;&#x5149;&#x3001;&#x6C88;&#x7D04;&#x3001;&#x9B5A;&#x4FF1;&#x7F85;&#x3001;&#x6731;&#x53CB;&#x5B5C;&#x3001;&#x5317;&#x6F22;&#x5289;&#x5D07;&#x3001;&#x674E;&#x715C;&#x3001;&#x5353;&#x5CA9;&#x660E;&#x3001;&#x660E;&#x7389;&#x73CD;&#x3001;&#x9867;&#x708E;&#x6B66;</li>
 <li>&#x4E09;&#x4E73;&#xFF1A;&#x674E;&#x6DF5;</li>
 <li>&#x5927;&#x982D;&#xFF1A;&#x82FB;&#x96C4;</li>
+<li>&#x8C41;&#x7259;&#xFF1A;&#x6155;&#x5BB9;&#x5782;</li>
 <li>&#x5DE8;&#x4EBA;&#xFF1A;&#x962E;&#x7FC1;&#x4EF2;&#x3001;&#x5DE8;&#x6BCB;&#x9738;</li>
 <li>&#x9B54;&#x8853;&#x5E2B;&#xFF1A;&#x9ECE;&#x8ED2;&#x5584;&#x7729;&#x4EBA;&#x3001;&#x6D77;&#x897F;&#x5E7B;&#x4EBA;</li>
 <li>&#x842C;&#x4EBA;&#x8FF7;&#xFF1A;&#x9EC3;&#x61B2;&#x3001;&#x6EAB;&#x5DA0;</li>
 <li>&#x6B7B;&#x5FE0;&#x8001;&#x5916;&#xFF1A;&#x547C;&#x5C24;&#x5FBD;&#x3001;&#x6BB5;&#x5339;&#x78FE;</li>
 <li>&#x53CB;&#x65B9;&#x4E2D;&#x7684;&#x524D;&#x671D;&#x5FE0;&#x826F;&#x2236;&#x5B5D;&#x5E73;&#x738B;&#x7687;&#x540E;&#x3001;&#x53F8;&#x99AC;&#x5B5A;</li>
-<li>&#x8D77;&#x540D;&#x96A8;&#x4FBF;&#xFF1A;&#x80A5;&#x9296;&#x3001;&#x6731;&#x5000;&#x3001;&#x5289;&#x849C;&#x3001;&#x9127;&#x731B;&#x5973;&#x3001;&#x674E;&#x79E6;&#x6388;&#x3001;&#x5F35;&#x8C7A;&#x3001;&#x891A;&#x849C;&#x5B50;</li>
+<li>&#x8D77;&#x540D;&#x96A8;&#x4FBF;&#xFF1A;&#x80A5;&#x9296;&#x3001;&#x6731;&#x5000;&#x3001;&#x5289;&#x849C;&#x3001;&#x9127;&#x731B;&#x5973;&#x3001;&#x674E;&#x79E6;&#x6388;&#x3001;&#x5F35;&#x8C7A;&#x3001;&#x891A;&#x849C;&#x5B50;&#x3001;&#x6731;&#x79C3;</li>
 <li>&#x5973;&#x738B;&#x8303;&#x5152;&#xFF1A;&#x90ED;&#x5973;&#x738B;&#x3001;&#x8881;&#x5973;&#x7687;</li>
 <li>&#x4E0D;&#x5012;&#x7FC1;&#xFF1A;&#x53D4;&#x5B6B;&#x901A;&#x3001;&#x9673;&#x5E73;&#x3001;&#x80E1;&#x5EE3;&#x3001;&#x99AE;&#x9053;&#x3001;&#x66F9;&#x632F;&#x93DE;</li>
 <li>&#x4E09;&#x4EBA;&#x4E09;&#x5C0D;&#xFF1A;&#x885B;&#x9748;&#x516C;+&#x5F4C;&#x5B50;&#x7455;+&#x5357;&#x5B50;&#x3001;&#x6F22;&#x54C0;&#x5E1D;+&#x8463;&#x8CE2;+&#x8463;&#x8CE2;&#x59BB;(+&#x8463;&#x662D;&#x5100;)&#x3001;&#x6881;&#x5180;+&#x5B6B;&#x58FD;+&#x79E6;&#x5BAE;</li>
 <li>&#x5144;&#x5F1F;&#x4E09;&#x4EBA;&#x540C;&#x5E8A;&#xFF1A;&#x59DC;&#x80B1;+&#x59DC;&#x4EF2;&#x6D77;+&#x59DC;&#x5B63;&#x6C5F;&#x3001;&#x5289;&#x5099;+&#x95DC;&#x7FBD;+&#x5F35;&#x98DB;</li>
-<li>&#x523A;&#x5BA2;&#x4E0D;&#x5FCD;&#x6BBA;&#xFF1A;&#x8D99;&#x76FE;&#x3001;&#x5D14;&#x7426;&#x3001;&#x8521;&#x9095;&#x3001;&#x8A31;&#x5112;&#x3001;&#x674E;&#x52E2;&#x59B9;</li>
+<li>&#x523A;&#x5BA2;&#x4E0D;&#x5FCD;&#x6BBA;&#xFF1A;&#x8D99;&#x76FE;&#x3001;&#x5D14;&#x7426;&#x3001;&#x8521;&#x9095;&#x3001;&#x8A31;&#x5112;&#x3001;&#x674E;&#x52E2;&#x59B9;&#x3001;&#x59DA;&#x8944;</li>
 <li>&#x6975;&#x9650;&#x9003;&#x751F;&#xFF1A;&#x8D99;&#x6B66;&#x3001;&#x8607;&#x6B66;&#x3001;&#x675C;&#x6839;&#x3001;&#x7B2C;&#x4E94;&#x7A2E;&#x3001;&#x674E;&#x71EE;&#x3001;&#x8D99;&#x5C90;&#x3001;&#x5F35;&#x5109;</li>
 <li>&#x8650;&#x5F92;&#x4E8B;&#x4EF6;&#xFF1A;&#x9EC3;&#x77F3;&#x516C;+&#x5F35;&#x826F;&#x3001;&#x90ED;&#x6CF0;+&#x9B4F;&#x662D;</li>
 <li>&#x6613;&#x8207;&#x8033;&#xFF1A;&#x5287;&#x8F9B;+&#x9F90;&#x7156;&#x3001;&#x9F8D;&#x4E14;+&#x97D3;&#x4FE1;&#x3001;&#x674E;&#x5EE3;+&#x80E1;&#x865C;&#x3001;&#x590F;&#x4FAF;&#x6DF5;+&#x97D3;&#x9042;</li>
 <li>&#x76F8;&#x611B;&#x76F8;&#x6BBA;&#xFF1A;&#x5F35;&#x8033;+&#x9673;&#x9918;&#x3001;&#x5B6B;&#x6B0A;+&#x5F35;&#x662D;&#x3001;&#x53F8;&#x99AC;&#x9852;+&#x5289;&#x6C88;&#x3001;&#x5289;&#x8070;+&#x5289;&#x4E42;&#x3001;&#x5289;&#x7428;+&#x6BB5;&#x5339;&#x78FE;</li>
 <li>&#x66FF;&#x8EAB;&#xFF1A;&#x5289;&#x90A6;-&#x7D00;&#x4FE1;&#x3001;&#x7956;&#x7D04;-&#x95BB;&#x79C3;</li>
+<li>&#x6065;&#x505A;&#x4E7E;&#x5152;&#x5B50;&#xFF1A;&#x79E6;&#x59CB;&#x7687;-&#x5AEA;&#x6BD0;&#x3001;&#x5F35;&#x7D89;-&#x66F9;&#x64CD;&#x3001;&#x5F35;&#x9047;-&#x82FB;&#x5065;</li>
 <li>&#x81EA;&#x7BC9;&#x5C0F;&#x5C4B;&#xFF1A;&#x8881;&#x958E;&#x3001;&#x7533;&#x5C60;&#x87E0;</li>
 <li>&#x5546;&#x754C;&#x7CBE;&#x82F1;&#xFF1A;&#x5442;&#x4E0D;&#x97CB;&#x3001;&#x5B5F;&#x4F57;</li>
 <li>&#x88AB;&#x59E6;&#x5C38;&#xFF1A;&#x5442;&#x540E;&#x3001;&#x6F22;&#x6853;&#x5E1D;&#x99AE;&#x8CB4;&#x4EBA;</li>
