--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -124,7 +124,7 @@
 <li>裝醉大師：王允之</li>
 <li>獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、蕭繹、李克用、李自成</li>
 <li>高頻率犯罪：劉賀、劉立</li>
-<li>背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇</li>
+<li>背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇、袁真</li>
 <li>殺子：石碏、金日磾、漢成帝、王立、王莽</li>
 <li>殺兄入嫂：齊桓公、李世民</li>
 <li>狗屎運：王興、王盛、黃耇、吳平</li>
