更新至卷102節6
Former-commit-id: d2999aa1387bc7a3ddf08920e08afa32dc00e2cb

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -59,7 +59,7 @@
 <li>被後媽虐：祖己、薛苞、蔣詡、李曇、王祥</li>
 <li>愚孝：祖己、孫性、李班</li>
 <li>愚忠：王累</li>
-<li>摳門：樊伷、曹洪、司馬騰</li>
+<li>摳門：樊伷、曹洪、司馬騰、慕容評</li>
 <li>給君主獻孕婦：呂不韋、春申君</li>
 <li>龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡</li>
 <li>口吃：韓非、周昌、司馬相如、揚雄、鄧艾、曹叡、馬鈞</li>
@@ -130,6 +130,7 @@
 <li>狗屎運：王興、王盛、黃耇、吳平</li>
 <li>仁義之師：趙充國、漢光武帝、慕容恪</li>
 <li>奇葩爵位：羹頡侯劉信、不義侯子密</li>
+<li>大預言家：辛憲英、申胤</li>
 <li>女反賊：呂母、遲昭平、徵側、徵貳、陳碩真</li>
 <li>女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻</li>
 <li>女智謀家：辛憲英、習英習</li>
