--- a/index.html
+++ b/index.html
@@ -1147,6 +1147,16 @@
 <td></td>
 <td>晉穆帝17年至18年、晉哀帝至5年、晉廢帝至4年</td>
 </tr>
+<tr>
+<td>813</td>
+<td><a href="5_%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4102.html">卷102</a></td>
+<td>晉紀二十四</td>
+<td>369</td>
+<td>370</td>
+<td></td>
+<td></td>
+<td>晉廢帝5年至6年</td>
+</tr>
 </tbody>
 </table>
 </details>
