更新至卷103節1
Former-commit-id: 1bd56fc06c36a2adb133bd9d02ec07d1a7e82b37

--- a/5_筆記/资治通鉴102.html
+++ b/5_筆記/资治通鉴102.html
@@ -49,12 +49,12 @@
 <h2 class="crossnote-header" id="81304-%E5%89%8D%E7%87%95%E4%BA%82%E6%94%BF%E4%B8%8D%E5%82%99%E5%89%8D%E7%A7%A6">81304 前燕亂政不備前秦</h2>
 
 <blockquote>
-<p>秦留梁琛月馀-&gt;疏奏，不省</p>
+<p>秦留梁琛月馀-&gt;以溫世子熙為豫州刺史、假節</p>
 </blockquote>
 <h2 class="crossnote-header" id="81305-%E5%89%8D%E7%A7%A6%E5%87%BA%E5%85%B5%E5%8F%8A%E7%8E%8B%E7%8C%9B%E5%8F%8D%E9%96%93%E6%85%95%E5%AE%B9%E5%9E%82">81305 前秦出兵及王猛反間慕容垂</h2>
 
 <blockquote>
-<p>辛丑，丞相昱与大司马温会涂中-&gt;岂雅德君子所宜为哉</p>
+<p>初，燕人許割虎牢以西賂秦-&gt;岂雅德君子所宜为哉</p>
 </blockquote>
 <h2 class="crossnote-header" id="81306-%E5%89%8D%E7%A7%A6%E6%BB%85%E5%89%8D%E7%87%95%E4%B9%8B%E6%88%B0">81306 前秦滅前燕之戰</h2>
 
