--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -122,7 +122,8 @@
 <li>裝死大師：杜根</li>
 <li>裝病大師：司馬懿、衛瓘、王戎</li>
 <li>裝醉大師：王允之</li>
-<li>獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、蕭繹、李克用、李自成</li>
+<li>獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、房曠、蕭繹、李克用、李自成</li>
+<li>黑皮: 李陵容</li>
 <li>高頻率犯罪：劉賀、劉立</li>
 <li>背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇、袁真</li>
 <li>殺子：石碏、金日磾、漢成帝、王立、王莽</li>
