--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -133,7 +133,7 @@
 <li>奇葩爵位：羹頡侯劉信、不義侯子密</li>
 <li>大預言家：辛憲英、申胤、黃泓</li>
 <li>女反賊：呂母、遲昭平、徵側、徵貳、陳碩真</li>
-<li>女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻</li>
+<li>女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母</li>
 <li>女智謀家：辛憲英、習英習</li>
 <li>誓不改嫁：夏侯令女</li>
 <li>女權主義者∶程咸</li>
