--- a/index.html
+++ b/index.html
@@ -1167,6 +1167,16 @@
 <td></td>
 <td>晉廢帝7年、晉簡文帝至2年、晉孝武帝至4年</td>
 </tr>
+<tr>
+<td>815</td>
+<td><a href="5_%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4104.html">卷104</a></td>
+<td>晉紀二十六</td>
+<td>376</td>
+<td>382</td>
+<td></td>
+<td></td>
+<td>晉孝武帝5年至11年</td>
+</tr>
 </tbody>
 </table>
 </details>
