--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -50,7 +50,7 @@
 <li>赴戰陣殉難：關靖、于詮、諸葛尚</li>
 <li>跳樓：揚雄、緑珠</li>
 <li>食餅毒死：漢質帝、晉惠帝</li>
-<li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘</li>
+<li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民</li>
 <li>智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母</li>
 <li>絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父</li>
 <li>清醒子女：胡毋謙之、張韙</li>
@@ -109,7 +109,7 @@
 <li>暴露狂：桑扈、上官安、劉伶、張滿</li>
 <li>飆車愛好者：劉賀</li>
 <li>cosplay愛好者：濟東王劉彭離、漢靈帝</li>
-<li>女裝大佬：曹叡、何晏</li>
+<li>女裝大佬：曹叡、何晏、王國寶</li>
 <li>娘砲：李固、曹植、何晏、唐伯虎</li>
 <li>僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、魯女生</li>
 <li>著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰</li>
