更新至卷105節7
Former-commit-id: 60ac61425f037b31b8699cedf668415d68cf9817

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -39,7 +39,7 @@
 <li>虐待動物：田單、楊琁</li>
 <li>招貓遞狗君王：無彊、宋康王、齊湣王</li>
 <li>餓死：齊桓公、趙武靈王、齊王建、趙王劉友、周亞夫、楊喬、得來、楊芷</li>
-<li>氣死：申屠嘉、王商、梁女瑩、朱穆、朱儁、陸遜、羊琇、向雄、晉元帝、王遜</li>
+<li>氣死：申屠嘉、王商、梁女瑩、朱穆、朱儁、陸遜、羊琇、向雄、晉元帝、王遜、桓沖</li>
 <li>吐哺：周公、郗鑒</li>
 <li>死於廁所：晉景公、韓馥</li>
 <li>哭死哭瞎：子夏、張放、孝睦皇后、趙戩</li>
